<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activity.NoticiaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:id="@+id/tituloNoticia1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/TituloNoticia1"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/fotoNoticia1"
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/foto_noticia1" />

            <TextView
                android:id="@+id/fonteNoticia1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/fonteNoticia"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/corpoTexto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10sp"
                android:text="@string/corpoTexto1" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <androidx.coordinatorlayout.widget.CoordinatorLayout-->

<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

<!--        <com.google.android.material.bottomappbar.BottomAppBar-->
<!--            android:id="@+id/bottomAppBar"-->
<!--            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_gravity="bottom"-->
<!--            app:layout_constraintBottom_toBottomOf="parent" />-->
<!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>